--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,8 +1,8 @@
-<idea-plugin version="2" url="https://wakatime.com">
-    <id>com.wakatime.intellij.plugin</id>
-    <name>WakaTime</name>
+<idea-plugin version="2" url="https://itimetrack.com/">
+    <id>com.iTimeTrack.intellij.plugin</id>
+    <name>iTimeTrack</name>
     <version>7.0.5</version>
-    <vendor email="support@wakatime.com" url="https://wakatime.com">WakaTime</vendor>
+    <vendor email="support@itimetrack.com" url="https://itimetrack.com">iTimeTrack</vendor>
 
     <description><![CDATA[
       Metrics, insights, and time tracking automatically generated from your programming activity.<br />
@@ -11,19 +11,19 @@
       <br />
       1. Inside your IDE, select Preferences -> Plugins -> Browse Repositories....<br />
       <br />
-      2. Search for wakatime.<br />
+      2. Search for iTimeTrack.<br />
       <br />
       3. Click the green Install Plugin button and confirm the installation.<br />
       <br />
       4. Re-launch your IDE.<br />
       <br />
-      5. Enter your <a href="https://wakatime.com/settings?apikey=true">api key</a>, then click Save.<br />
+      5. Enter your <a href="http://itimetrack.com/app/#!/settings-general">api key</a>, then click Save.<br />
       <br />
       6. Use your IDE like you normally do and your time will be tracked for you automatically.<br />
       <br />
-      7. Visit https://wakatime.com to see your logged time.<br />
+      7. Visit https://itimetrack.com to see your logged time.<br />
       <br />
-      Source Code:  <a href="https://github.com/wakatime/jetbrains-wakatime">https://github.com/wakatime/jetbrains-wakatime</a>
+      Source Code:  <a href="https://github.com/itimetrack/itimetrack-jetbrains">https://github.com/itimetrack/itimetrack-jetbrains</a>
     ]]></description>
 
     <change-notes><![CDATA[
